--- a/components/stm32/CMakeLists.txt
+++ b/components/stm32/CMakeLists.txt
@@ -10,4 +10,4 @@ idf_component_register(
                   spiffs
 )
 
-component_compile_options(-${component_compile_opts})
+component_compile_options(${component_compile_opts})
