--- a/components/stm32/CMakeLists.txt
+++ b/components/stm32/CMakeLists.txt
@@ -4,7 +4,7 @@ set(srcs esp32/stm32_bl.c  esp32/stm32.c  esp32/stm32_ota.cc
 
 idf_component_register(
     SRCS ${srcs} 
-    INCLUDE_DIRS . "./include" 
+    INCLUDE_DIRS "./include" 
     REQUIRES ""  
     PRIV_REQUIRES app_config net debug
                   spiffs #PRIV_ESP_IDF
